Versao com variaveis atomicas